# practicasAlgoritmos

./: CMakeLists.txt
dinamicos/: a.out  ejercicio1.c  ejercicio10.c  ejercicio11.c  ejercicio12.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  ejercicio9.c  teoria.c
dinamicos/fvector/: fvector.h.gch
divide_venceras/: a.out  ejercicio1.c  ejercicio10.c  ejercicio11.c  ejercicio12.c  ejercicio13.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  ejercicio9.c  vrotado.c
divide_venceras/algorithms/: ejercicio7.h  ejercicio8.c  ejercicio8.h
probabilisticos/: a.out  ejercicio1.c  ejercicio2.c  ejercicio3 copy.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c
voraces/: dijkstra.c  ejercicio1.c  ejercicio1.h  ejercicio10.c  ejercicio11.c  ejercicio12.c  ejercicio12.h  ejercicio2.c  ejercicio2.h  ejercicio3.c  ejercicio3.h  ejercicio4.c  ejercicio4.h  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  ejercicio9.c  krushkal.c  prim.c  prim.h
vuelta_atras/: a.out  ejercicio1  ejercicio1.c  ejercicio10  ejercicio10.c  ejercicio11  ejercicio11.c  ejercicio2  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  ejercicio9  ejercicio9.c  prueba.c  subsecuencia.c
